--- a/HTML/Gym.html
+++ b/HTML/Gym.html
@@ -20,7 +20,7 @@
     />
 
 
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
     <title>Gym</title>
     <style></style>
   </head>
