--- a/HTML/PersonalWorkout.html
+++ b/HTML/PersonalWorkout.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="./personal.css">
+    <link rel="stylesheet" href="../CSS/personal.css">
     <title>PERSONAL TRAINERS</title>
 
   </head>
