--- a/HTML/Classes.html
+++ b/HTML/Classes.html
@@ -25,7 +25,7 @@
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         />
-        <link rel="stylesheet" href="./classes.css">
+        <link rel="stylesheet" href="../CSS/classes.css">
         <title>Document</title>
 
        
