--- a/AirYoga.html
+++ b/AirYoga.html
@@ -337,8 +337,8 @@
             <a href="./Plans.html" class="btn">BookMembership</a>
         </div>
         <div id="imgs">
-            <img src="../Images/AirYoga_1.avif" alt="">
-            <img src="../Images/AirYoga_2.avif" alt="">
+            <img src="../BuildBar/Images/AirYoga_1.avif" alt="">
+            <img src="../BuildBar/Images/AirYoga_2.avif" alt="">
         </div>
     </div>
 
