--- a/BodyBuilding.html
+++ b/BodyBuilding.html
@@ -327,18 +327,18 @@
     <div id="main-Container">
         <div id="info">
 
-            <h1>Cardio</h1>
-            <h3>Every Day  8:00 PM </h3>
+            <h1>Body Building</h1>
+            <h3>Every Monday and Wednesday  14:00</h3>
 
-            <P>A solid cardio workout is the backbone of an effective workout regime, which is why we run cardio classes twice daily.<br><br> 
+            <P>Want to tone, get muscle definition, and feel stronger in your everyday life? Then our body-building classes are made for you.<br><br>
 
-                Whether you’re right at the start of a weight loss journey, or simply looking to tone up and keep fit, our cardio classes will put you through your paces and keep you on top form.</P>
+                You’ll be walked through a set of exercises together with our top coaches at the start of the class with different rotations and number of repetitions as the weeks go by. Pair this with our cardio and cardio boxing classes for maximum effect.</P>
 
-            <a href="./Shedule.html" class="btn">BookNow</a>
+            <a href="./Plans.html" class="btn">BookMembership</a>
         </div>
         <div id="imgs">
-            <img src="../Images/Cardio_!.avif" alt="">
-            <img src="../Images/Cardio_2.avif" alt="">
+            <img src="../BuildBar/Images/BodyBuilding_!.avif" alt="">
+            <img src="../BuildBar/Images/b.avif" alt="">
         </div>
     </div>
 
