--- a/Cardio.html
+++ b/Cardio.html
@@ -29,6 +29,7 @@
         #main-Container{
             width: 100%;
             height: 700px;
+           
             display: flex;
             align-items: center;
             justify-content: center;
@@ -326,18 +327,18 @@
     <div id="main-Container">
         <div id="info">
 
-            <h1>Press & Back</h1>
-            <h3>Every Day  10:00 AM</h3>
+            <h1>Cardio</h1>
+            <h3>Every Day  8:00 PM </h3>
 
-            <P>There are few better full-body workouts available than our press and back classes. We welcome members of all abilities to our classes, and are always keen to help beginners make a start<br><br>
+            <P>A solid cardio workout is the backbone of an effective workout regime, which is why we run cardio classes twice daily.<br><br> 
 
-                If you can’t find a class at a time that suits you, please get in touch with us, since we often hold spontaneous classes which don’t make their way onto the official schedule.</P>
+                Whether you’re right at the start of a weight loss journey, or simply looking to tone up and keep fit, our cardio classes will put you through your paces and keep you on top form.</P>
 
             <a href="./Shedule.html" class="btn">BookNow</a>
         </div>
         <div id="imgs">
-            <img src="../Images/Press&back_1.avif" alt="">
-            <img src="../Images/Press&back_2.avif" alt="">
+            <img src="../BuildBar/Images/Cardio_!.avif" alt="">
+            <img src="../BuildBar/Images/Cardio_2.avif" alt="">
         </div>
     </div>
 
