--- a/CardioBoxing.html
+++ b/CardioBoxing.html
@@ -29,6 +29,7 @@
         #main-Container{
             width: 100%;
             height: 700px;
+           
             display: flex;
             align-items: center;
             justify-content: center;
@@ -326,18 +327,16 @@
     <div id="main-Container">
         <div id="info">
 
-            <h1>Lifting</h1>
-            <h3>Every Day  21:00 </h3>
+            <h1>Cardio Boxing</h1>
+            <h3>Every Monday and Friday 17:00</h3>
 
-            <P>Lifting isn’t just about strength. While you will build great core, arm, and leg muscles while lifting, you’ll also develop better coordination and an understanding of how your body interacts with the world.<br><br> 
+            <P>Sometimes nothing feels as good as putting on your gloves and kicking the crap out of a boxing bag or a set of pads. In our cardio boxing classes, we’ll focus on great technique and build stamina through boxing-inspired routines.<br><br> There won’t be any contact exercises, meaning that you can get the benefits of a boxing workout without the fear of breaking someone’s nose. </P>
 
-                Whether you’re already an experienced weightlifter, or have never picked up a dumbbell in your life, you’ll find a lot of value in our classes.</P>
-
-            <a href="./Plans.html" class="btn">BookNow</a>
+            <a href="./Plans.html" class="btn">BookMembership</a>
         </div>
         <div id="imgs">
-            <img src="../Images/Lifting_1.avif" alt="">
-            <img src="../Images/Lifting_2.avif" alt="">
+            <img src="../BuildBar/Images/CardioBoxing_1.avif" alt="">
+            <img src="../BuildBar//Images/CardioBoxing.avif" alt="">
         </div>
     </div>
 
