--- a/Lifting.html
+++ b/Lifting.html
@@ -29,7 +29,6 @@
         #main-Container{
             width: 100%;
             height: 700px;
-           
             display: flex;
             align-items: center;
             justify-content: center;
@@ -327,18 +326,18 @@
     <div id="main-Container">
         <div id="info">
 
-            <h1>Callanetics</h1>
-            <h3>Every Tuesday at  16:00</h3>
+            <h1>Lifting</h1>
+            <h3>Every Day  21:00 </h3>
 
-            <P>Callanetics is the ideal form of exercise for anyone who wants to avoid high-impact but tone up all the same.<br><br>
+            <P>Lifting isn’t just about strength. While you will build great core, arm, and leg muscles while lifting, you’ll also develop better coordination and an understanding of how your body interacts with the world.<br><br> 
 
-Focusing on working the deep muscles, this class helps you achieve better posture and safeguards you from developing injuries that come with a weak core. Our callanetics classes are open for all ages.</P>
+                Whether you’re already an experienced weightlifter, or have never picked up a dumbbell in your life, you’ll find a lot of value in our classes.</P>
 
-            <a href="./Plans.html" class="btn">BookMembership</a>
+            <a href="./Plans.html" class="btn">BookNow</a>
         </div>
         <div id="imgs">
-            <img src="../Images/Callanetics_1.avif" alt="">
-            <img src="../Images/Callanetics_2.avif" alt="">
+            <img src="../BuildBar/Images/Lifting_1.avif" alt="">
+            <img src="../BuildBar/Images/Lifting_2.avif" alt="">
         </div>
     </div>
 
