--- a/PersonalWorkout.html
+++ b/PersonalWorkout.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="../CSS/personal.css">
+    <link rel="stylesheet" href="../BuildBar/CSS/personal.css">
     <title>PERSONAL TRAINERS</title>
 
   </head>
@@ -40,7 +40,7 @@
           <a href="./Shedule.html" class="btn">SCHEDULE WORKOUT</a>
         </div>
         <div class="img">
-          <img src="../Images/Frist1.avif" alt="" />
+          <img src="../BuildBar/Images/Frist1.avif" alt="" />
         </div>
       </div>
       <div class="box">
@@ -59,7 +59,7 @@
         </div>
 
         <div class="img">
-          <img src="../Images/second1.avif" alt="" />
+          <img src="../BuildBar/Images/second1.avif" alt="" />
         </div>
       </div>
       <div class="box">
@@ -76,7 +76,7 @@
           <a href="./Shedule.html" class="btn">SCHEDULE WORKOUT</a>
         </div>
         <di class="img">
-          <img src="../Images/third.avif" alt="" />
+          <img src="../BuildBar/Images/third.avif" alt="" />
         </di>
       </div>
     </div>
