--- a/Press&Back.html
+++ b/Press&Back.html
@@ -29,7 +29,6 @@
         #main-Container{
             width: 100%;
             height: 700px;
-           
             display: flex;
             align-items: center;
             justify-content: center;
@@ -327,16 +326,18 @@
     <div id="main-Container">
         <div id="info">
 
-            <h1>Cardio Boxing</h1>
-            <h3>Every Monday and Friday 17:00</h3>
+            <h1>Press & Back</h1>
+            <h3>Every Day  10:00 AM</h3>
 
-            <P>Sometimes nothing feels as good as putting on your gloves and kicking the crap out of a boxing bag or a set of pads. In our cardio boxing classes, we’ll focus on great technique and build stamina through boxing-inspired routines.<br><br> There won’t be any contact exercises, meaning that you can get the benefits of a boxing workout without the fear of breaking someone’s nose. </P>
+            <P>There are few better full-body workouts available than our press and back classes. We welcome members of all abilities to our classes, and are always keen to help beginners make a start<br><br>
 
-            <a href="./Plans.html" class="btn">BookMembership</a>
+                If you can’t find a class at a time that suits you, please get in touch with us, since we often hold spontaneous classes which don’t make their way onto the official schedule.</P>
+
+            <a href="./Shedule.html" class="btn">BookNow</a>
         </div>
         <div id="imgs">
-            <img src="../Images/CardioBoxing.avif" alt="">
-            <img src="../Images/CardioBoxing_1.avif" alt="">
+            <img src="../BuildBar/Images/Press&back_1.avif" alt="">
+            <img src="../BuildBar/Images/Press&back_2.avif" alt="">
         </div>
     </div>
 
