--- a/SportDances.html
+++ b/SportDances.html
@@ -327,18 +327,18 @@
     <div id="main-Container">
         <div id="info">
 
-            <h1>Body Building</h1>
-            <h3>Every Monday and Wednesday  14:00</h3>
+            <h1>Sport Dances</h1>
+            <h3>Every Thursday 18:00</h3>
 
-            <P>Want to tone, get muscle definition, and feel stronger in your everyday life? Then our body-building classes are made for you.<br><br>
+            <P>Let your hair down and lose yourself to music in our high-intensity sport dance classes. With mood lighting, this class has been a hit ever since it was introduced. <br><br>
 
-                You’ll be walked through a set of exercises together with our top coaches at the start of the class with different rotations and number of repetitions as the weeks go by. Pair this with our cardio and cardio boxing classes for maximum effect.</P>
+                We aim to combine dancing with cardio exercises in this class, meaning that even if you have two left feet, you can still break a sweat and enjoy the beat. Our top instructors make sure that everyone leaves this class with a big, wide grin on their face.</P>
 
             <a href="./Plans.html" class="btn">BookMembership</a>
         </div>
         <div id="imgs">
-            <img src="../Images/BodyBuilding_!.avif" alt="">
-            <img src="../Images/b.avif" alt="">
+            <img src="../BuildBar/Images/SportDance_1.avif" alt="">
+            <img src="../BuildBar/Images/SportDance_2.avif" alt="">
         </div>
     </div>
 
