--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
 
 
-    <link rel="stylesheet" href="../CSS/main.css" />
+    <link rel="stylesheet" href="../BuildBar/CSS/main.css" />
     <title>Gym</title>
     <style></style>
   </head>
@@ -80,20 +80,20 @@
       <h1>POPULAR CLASSES</h1>
       <div id="card">
         <div class="cards">
-          <a href=""> <img src="../Images/class-1.avif" alt="" /> </a>
+          <a href=""> <img src="../BuildBar/Images/Cardio.avif" alt="" /> </a>
           <h2>Cardio</h2>
         </div>
 
         <div class="cards">
-          <a href=""><img src="../Images/class-2.avif" alt="" /></a>
+          <a href=""><img src="../BuildBar/Images/AirYoga.avif" alt="" /></a>
           <h2>AirYoga</h2>
         </div>
         <div class="cards">
-          <a href=""><img src="../Images/class-3.avif" alt="" /></a>
+          <a href=""><img src="../BuildBar/Images/Lifting.avif" alt="" /></a>
           <h2>Lifting</h2>
         </div>
         <div class="cards">
-          <a href=""><img src="../Images/class-4.avif" alt="" /></a>
+          <a href=""><img src="../BuildBar/Images/Press&back.avif" alt="" /></a>
           <h2>Press & Back</h2>
         </div>
       </div>
