--- a/Callanetics.html
+++ b/Callanetics.html
@@ -327,18 +327,18 @@
     <div id="main-Container">
         <div id="info">
 
-            <h1>Sport Dances</h1>
-            <h3>Every Thursday 18:00</h3>
+            <h1>Callanetics</h1>
+            <h3>Every Tuesday at  16:00</h3>
 
-            <P>Let your hair down and lose yourself to music in our high-intensity sport dance classes. With mood lighting, this class has been a hit ever since it was introduced. <br><br>
+            <P>Callanetics is the ideal form of exercise for anyone who wants to avoid high-impact but tone up all the same.<br><br>
 
-                We aim to combine dancing with cardio exercises in this class, meaning that even if you have two left feet, you can still break a sweat and enjoy the beat. Our top instructors make sure that everyone leaves this class with a big, wide grin on their face.</P>
+Focusing on working the deep muscles, this class helps you achieve better posture and safeguards you from developing injuries that come with a weak core. Our callanetics classes are open for all ages.</P>
 
             <a href="./Plans.html" class="btn">BookMembership</a>
         </div>
         <div id="imgs">
-            <img src="../Images/SportDance_1.avif" alt="">
-            <img src="../Images/SportDance_2.avif" alt="">
+            <img src="../BuildBar/Images/Callanetics_1.avif" alt="">
+            <img src="../BuildBar/Images/Callanetics_2.avif" alt="">
         </div>
     </div>
 
